2002-04-17  Andrew Csillag  <drew@localhost.localdomain>

	* NEWS: updating for what will be 3.2.1 

	* pylibs/armor.py: added dearmor_detail so you can find out 
	where something died

	* configure, configure.in: added cookieauth stuff
	
	* SkunkWeb/configure, SkunkWeb/configure.in: added cookieauth stuff

	* SkunkWeb/sw.conf.in: added cookieauth stuff

	* SkunkWeb/Services/cookieauth/{__init__.py,login.html,logout.html}:
	added cookie authentication service

2002-04-13  Andrew Csillag  <drew@thoughttrack.com>

	* SkunkWeb/mod_skunkweb/mod_skunkweb.c: first shot towards Apache 2
	compatibility.  Doesn't compile for it yet, but it's getting there.

2002-04-13  Andrew Csillag  <drew@localhost.localdomain>

	* pylibs/PyDO/PyDO.py: fixed bug in scatterFetchPost when got no results back from the query.  Thanks to Karl Putland <kperacles@yahoo.com>.

2002-04-09  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/AE/Cache.py (CachedComponent.__init__): stale was
	being set to precisely the wrong value; thanks to Stephen Coursen
	for catching this (*immediately* after the release of 3.2!)

2002-04-09  Andrew Csillag  <drew@yahoo.com>

	* SkunkWeb 3.2 cut

2002-04-06  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/Date/TimeUtil.py (untilString): fixes what looks like
	a cut-and-paste error that has been lurking here since 3.0.

2002-04-02  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/web/protocol.py (HTTPConnection.extract_args): 
	fixed bug that produced UnboundLocalError in some cases

	* SkunkWeb/sample_webdocs/demo/gallery/thumbnail.py: fixed
	dumb typo that produced NameError.

2002-03-31  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/sample_webdocs/demo/gallery/thumbnail.py: now use
	CONNECTION.extract_args.

	* SkunkWeb/Services/pars: removing from cvs and distro.

	* SkunkWeb/configure.in, SkunkWeb/configure: remove par script,
	added productwiz.

	* SkunkWeb/Services/Makefile.in: put productwiz script in bin/.
